--- a/badweb.html
+++ b/badweb.html
@@ -1,1 +1,11 @@
+<!DOCTYPE html>
+<html
+
+<h1>BAD <br>Bad Apps Development <br>by</h1>
+<br>
+<h2>Trevor Atkinson</h2>
+<br>
+<hr size="3" width="75%" align="center" color="brown">
+</center>
+
 
