--- a/Notes/Notes.html
+++ b/Notes/Notes.html
@@ -1,5 +1,16 @@
 <!DOCTYPE html>
 <html>
+<-- These are class notes from HTML Udemy-->
+<br>
+<-- This how to make a comment--> <br> <-- Comments are not seen in the webpage enduser-->
+
 
 </html>
 <h1> This is a level 1 heading created using the h1 tag</h1>
+
+<h1>Heading 1</h1>
+<h2>Heading 2</h2>
+<h3>Heading 3</h3>
+<h4>Heading 4</h4>
+<h5>Heading 5</h5>
+<h6>Heading 6</h6>
