added UL, IL, pictures
looking better

--- a/Notes/Notes.html
+++ b/Notes/Notes.html
@@ -1,5 +1,14 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <title>Notes from Udemy Class</title>
+        <meta charset="utf-8">
+        <title></title>
+        <head>
+            <body> 
+                
+            <html></html>
+    </head>
 <-- These are class notes from HTML Udemy-->
 <br>
 <-- This how to make a comment--> <br> <-- Comments are not seen in the webpage enduser-->
@@ -14,3 +23,36 @@
 <h4>Heading 4</h4>
 <h5>Heading 5</h5>
 <h6>Heading 6</h6>
+
+<-- Thomas H Cormen John Kleinberg Donald Kunth-->
+
+<h1>TAGS AND SUCH</h1>
+ems text enhancer /ems> <br>
+strongmakes bold /strong> <br>
+del strikethrough /del> <br>
+ins underline /ins> <br>
+sub subscript /sub> <br>
+sup superscript /sup> <br>
+blockquote blockquote /blockquote> <br>
+q quote /q <br>
+abbr abbreviation /abbr> <br>
+address address /address> <br>
+Cite citation /Cite> <br>
+code code /code> <br>
+dfn> definition /dfn> <br>
+kbd> keyboard input /kbd> <br>
+-->
+
+<p> 
+    ul	Defines an unordered list <br>
+    ol	Defines an ordered list const <br>
+    li	Defines a list item <br>
+    dl	Defines a description list <br>
+    dt	Defines a term in a description list <br>
+    dd	Describes the term in a description list <br>
+</p>
+
+
+
+
+
