--- a/badwebp1.html
+++ b/badwebp1.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <title>BAD &#x1F608;</title>
@@ -12,26 +13,32 @@
             Is a Limited Liability Company.<br>
             We are a small company that works hard to make a positive difference in the world.
             We construct and host websites on our own servers, build application and APIs, provide prof of concept for
-            our clients <i><strong>all with a smile and personal touch</strong> </i>           
+            our clients <i><strong>all with a smile and personal touch</strong> </i>
         </p>
         <br>Company CEO
-            <br>Trevor Atkinson <br> <img src="https://github.com/oldmanj13/badweb/blob/main/Notes/trevor1.jpeg?raw=true" width="100" height="40" alt="Best Coder 1-Picture-CEO Trevor"> </br>
-        <HR>    
-            <h3>Involvements</h3>
-            <ul>
-            <li>First exposure to coding at the age of 14 with a short XBox 360 hacking stint, sanctions administered.</li>
-            <li>Development and deployment of a phone based fetal heart tone monitor that was featured in Google's top 100 apps of the year in 2010.</li>
-            <li>Development and deployment of a security WiFi tool still downloaded and used, located here, at age 17.</li></p></UL>
+        <br>Trevor Atkinson <br> <img src="https://github.com/oldmanj13/badweb/blob/main/trev%20beach1.JPG?raw=true"
+            width="100" height="40" alt="Best Coder 1-Picture-CEO Trevor"> </br>
+        <HR>
+        <h3>Involvements</h3>
+        <ul>
+            <li>First exposure to coding at the age of 14 with a short XBox 360 hacking stint, sanctions administered.
+            </li>
+            <li>Development and deployment of a phone based fetal heart tone monitor that was featured in Google's top
+                100 apps of the year in 2010.</li>
+            <li>Development and deployment of a security WiFi tool still downloaded and used, <a
+                    href="https://github.com/trevatk/Wifi-Cracker.git"  <a> located here,</a> at age 17.</li>
+            </p>
+        </UL>
         <hr>
         <h2>Knowledge Base &#129497</h2>
-         
+
         <h2>The Early Years</h2>
         <ul>
             <li>Centennial High</li>
             <li>Lowell Scott Middle School</li>
             <li>Computer Club</li>
         </ul>
-            
+
         <h2>College</h2>
         <ul>
             <li>Boise State University</li>
@@ -39,8 +46,8 @@
             <li>SWOCC</li>
             <li>Udemy?</li>
         </ul>
-    <hr>    
-        <h2>Work</h2>
+        <hr>
+        <h2>Work &#129412</h2>
         <h3>I don't know the name</h3>
         <OL>
             <li>Morning meeting</li>
