--- a/badwebp1.html
+++ b/badwebp1.html
@@ -12,7 +12,7 @@
         <p><I><strong>B.A.D</strong></I><br>
             Is a Limited Liability Company.<br>
             We are a small company that works hard to make a positive difference in the world.
-            We construct and host websites on our own servers, build application and APIs, provide prof of concept for
+            We construct and <a href="https://github.com/oldmanj13/badweb/blob/main/Bad-clint%20first%20contact-web.pdf" <a> host wesites</a> on our own servers, build application and APIs, provide prof of concept for
             our clients <i><strong>all with a smile and personal touch</strong> </i>
         </p>
         <br>Company CEO
