End of first section
3 page web

--- a/badwebp1.html
+++ b/badwebp1.html
@@ -12,11 +12,13 @@
         <p><I><strong>B.A.D</strong></I><br>
             Is a Limited Liability Company.<br>
             We are a small company that works hard to make a positive difference in the world.
-            We construct and <a href="https://github.com/oldmanj13/badweb/blob/main/Bad-clint%20first%20contact-web.pdf" <a> host wesites</a> on our own servers, build application and APIs, provide prof of concept for
+            We construct and <a href="X:\Git\badweb1\BAD-Forms\Bad-clint first contact-web-html.pdf" <a> host websites</a> on our own
+            servers, build application and APIs, provide prof of concept for
             our clients <i><strong>all with a smile and personal touch</strong> </i>
         </p>
         <br>Company CEO
-        <br>Trevor Atkinson <br> <img src="https://github.com/oldmanj13/badweb/blob/main/trev%20beach1.JPG?raw=true"
+        <br>Trevor Atkinson <br> <img
+            src="https://github.com/oldmanj13/badweb/blob/main/BAD-Picts/trev%20beach1.JPG?raw=true?raw=true"
             width="100" height="40" alt="Best Coder 1-Picture-CEO Trevor"> </br>
         <HR>
         <h3>Involvements</h3>
@@ -26,7 +28,12 @@
             <li>Development and deployment of a phone based fetal heart tone monitor that was featured in Google's top
                 100 apps of the year in 2010.</li>
             <li>Development and deployment of a security WiFi tool still downloaded and used, <a
-                    href="https://github.com/trevatk/Wifi-Cracker.git"  <a> located here,</a> at age 17.</li>
+                    href="https://github.com/trevatk/Wifi-Cracker.git" <a> located here,</a> at age 17.</li>
+        <hr>
+
+            <h3> <a href="badwebp2.html" <a>Examples</a></h3>
+
+
             </p>
         </UL>
         <hr>
@@ -55,6 +62,9 @@
             <li>Prof of concept design</li>
             <li>Staff and partner education</li>
         </OL>
+        <hr>
+        <h3><a href="badcontactp3.html" <a>Contacts</a> &#129517;</h3>
+        
         <html>
 
         </html>
