update 9/8/22 posting to the web next

--- a/badcontactp3.html
+++ b/badcontactp3.html
@@ -1,13 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BAD-Contacts &#x1F608;</title>
 </head>
+
 <body>
-   <h3>Contact &#129517;</h3>
-   <p>541-808-7140</p>
+    <h3>Contact &#129517;</h3>
+    <p>541-333-3332</p>
+    <p>666 Divel Way</p>
+    <p>Portland, OR 97201</p>
+
+
+    <from action="mailto:trevor@badappsdevelopment.com" method="post" enctype="text/plain">
+        <label>Your Name</label>
+        <input type="text" name="" value=""><br>
+<br>
+        <label>Your E-mail Address</label>
+        <input type="text" name="" value=""><br>
+        <br>
+        <label>Password</label>
+        <input type="password" name="" value=""><br>
+<br>
+         <label for="start">Website Start Date</label>
+        <input type="date" name="Website Complete" id="start"><br>
+    <br>
+        <label for="Website Upload">Upload your Website</label>
+        <input type="file" name="Website Upload" id="html">   <br>
+    <br>
+        <label for="name">Describe Website needs</label>:
+        <input type="text" name="name" id="name" required minlength="15" maxlength="20" size="60"><br>
+        <br>
+        <input type="submit" name="" ><br>
+<br>
+    </from> 
 </body>
+
 </html>
