--- a/badwebp1.html
+++ b/badwebp1.html
@@ -11,48 +11,82 @@
         <h1>Bad Apps Development &#x1F608;</h1>
         <p><I><strong>B.A.D</strong></I><br>
             Is a Limited Liability Company.<br>
-            We are a small company that works hard to make a positive difference in the world.
-            We construct and <a href="X:\Git\badweb1\BAD-Forms\Bad-clint first contact-web-html.pdf" <a> host websites</a> on our own
-            servers, build application and APIs, provide prof of concept for
+            We are a small company that works hard to positivly influance the world.
+            We construct and <a href="X:\Git\badweb1\BAD-Forms\Bad-clint first contact-web-html.pdf"> host websites</a>
+            on our own servers, build application and APIs, provide prof of concept for
             our clients <i><strong>all with a smile and personal touch</strong> </i>
-        </p>
-        <br>Company CEO
-        <br>Trevor Atkinson <br> <img
-            src="https://github.com/oldmanj13/badweb/blob/main/BAD-Picts/trev%20beach1.JPG?raw=true?raw=true"
-            width="100" height="40" alt="Best Coder 1-Picture-CEO Trevor"> </br>
-        <HR>
-        <h3>Involvements</h3>
+        <table cellspacing="22">
+            <tr>
+                <td><img
+                    src="https://github.com/oldmanj13/badweb/blob/main/BAD-Picts/trev%20beach1.JPG?raw=true?raw=true"
+                    width="200" height="200" alt="Best Coder 1-Picture-CEO Trevor"> </br></td>
+                <td><br>Company CEO
+                    <br>Trevor Atkinson <br></td>
+            </tr>
+        </table>
+        
+    <HR>
+        <h3>Early Impressions</h3>
         <ul>
             <li>First exposure to coding at the age of 14 with a short XBox 360 hacking stint, sanctions administered.
             </li>
             <li>Development and deployment of a phone based fetal heart tone monitor that was featured in Google's top
                 100 apps of the year in 2010.</li>
             <li>Development and deployment of a security WiFi tool still downloaded and used, <a
-                    href="https://github.com/trevatk/Wifi-Cracker.git" <a> located here,</a> at age 17.</li>
-        <hr>
+                    href="https://github.com/trevatk/Wifi-Cracker.git"> located here,</a> at age 17.</li><br>
+<hr>
 
-            <h3> <a href="badwebp2.html" <a>Examples</a></h3>
+            <h3> <a href="badwebp2.html">Examples</a></h3>
 
 
             </p>
         </UL>
         <hr>
-        <h2>Knowledge Base &#129497</h2>
+        <h2>Knowledge Base &#129497</h2>        
 
-        <h2>The Early Years</h2>
-        <ul>
-            <li>Centennial High</li>
-            <li>Lowell Scott Middle School</li>
-            <li>Computer Club</li>
-        </ul>
+        <table border="1">
+            <thead>
+                <tr>
+                    <th>Year</th>
+                    <th>School</th>
+                    <th>Sports</th>
+                    <th>Clubs</th>
+                    <th>Stars</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>2005-2006</td>
+                    <td>Lowe Scott</td>
+                    <td>Basketball</td>
+                    <td>Computer Club</td>
+                    <td>🌞🌞🌞🌞🌞</td>
+                <tr>
 
-        <h2>College</h2>
-        <ul>
-            <li>Boise State University</li>
-            <li>OSU</li>
-            <li>SWOCC</li>
-            <li>Udemy?</li>
-        </ul>
+                <tr>
+                    <td>2006-20010</td>
+                    <td>Centennial High</td>
+                    <td>Basketball</td>
+                    <td>Computer Club</td>
+                    <td>🌞🌞🌞🌞</td>
+                </tr>
+                <tr>
+                    <td>2000-2001</td>
+                    <td>Boise State University</td>
+                    <td>Computer Science</td>
+                    <td>Computer Club</td>
+                    <td>🌞🌞🌞🌞🌞</td>
+                </tr>
+                <tr>
+                    <td>2000-2002</td>
+                    <td>Idaho CC</td>
+                    <td>Computer Science</td>
+                    <td>Computer Club</td>
+                    <td>🌞🌞🌞🌞</td>
+                </tr>
+            </tbody>
+
+        </table><br>
         <hr>
         <h2>Work &#129412</h2>
         <h3>I don't know the name</h3>
@@ -62,9 +96,11 @@
             <li>Prof of concept design</li>
             <li>Staff and partner education</li>
         </OL>
+                <br>
         <hr>
-        <h3><a href="badcontactp3.html" <a>Contacts</a> &#129517;</h3>
         
+        <h3><a href="badcontactp3.html">Contacts</a> &#129517;</h3>
+
         <html>
 
         </html>
