--- a/badwebp2.html
+++ b/badwebp2.html
@@ -11,9 +11,9 @@
 <body>
     <h3>Examaples</h3>
     <ul>
-        <li><a href="https://www.bizapedia.com/id/joe-daily-racing-llc.html" <a> Daily Racing </a></li>
-        <li><a href="https://athleticbrewing.com/collections/beer" <a> Athletic Girl</a></li>
-        <li><a href="https://thegirlbanker.com/" <a> Banker Girl</a></li>
+        <li><a href="https://www.bizapedia.com/id/joe-daily-racing-llc.html" > Daily Racing </a></li>
+        <li><a href="https://athleticbrewing.com/collections/beer" > Athletic Girl</a></li>
+        <li><a href="https://thegirlbanker.com/" > Banker Girl</a></li>
     </ul>
 
 </body>
