--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
-<head>
+<>
     <meta charset="utf-8">
     <title>BAD &#x1F608;</title>
-
-    <head>
+<link rel="stylesheet" href="css/styles.css">
+</head>
 
     <body>
         <h1>Bad Apps Development &#x1F608;</h1>
